--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
 	<head>
 		<title>Test</title>
 		<script src="_.js"></script>
-
 		<script src="test.js"></script>
 	</head>
 	<body>
-		<div id="blue" style="height:15em; width:15em; background:blue;">
+		For online testing, go to => <a href="http://users.polytech.unice.fr/~izadi/coffee/">my web page</a>
+		
+		<div id="blue" style="height:10em; width:10em; background:blue; color:white;">
+			You can Tap me!
 		</div>
-		<div id="red" style="height:15em; width:15em; background:red;">
+		<div id="white" style="height:10em; width:10em; background:white;">
+			You can Double Tap me!
+		</div>
+		<div id="red" style="height:10em; width:10em; background:red;">
+			You can Press me!
 		</div>
 	</body>
 </html>
