--- a/State.html
+++ b/State.html
@@ -7,5 +7,13 @@
 		<script src="State.js"></script> 
 	</head> 
 	<body> 
+		<pre id="body">
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+</pre>
+
+		<pre id="debug"/>
 	</body> 
 </html> 
