--- a/State.html
+++ b/State.html
@@ -5,6 +5,7 @@
 	<head> 
 		<title>Test</title> 
 		<script src="State.js"></script> 
+		<meta name = "viewport" content = "width=device-width, height=device-height, initial-scale=1.0; minimum-scale=1.0; maximum-scale=1.0; user-scalable=no"> 
 	</head> 
 	<body> 
 		<pre id="body">
@@ -14,6 +15,6 @@ AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 </pre>
 
-		<pre id="debug"/>
+		<pre id="debug"></pre>
 	</body> 
 </html> 
