--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 
 <html>
 	<head>
+		<meta name="viewport" content="user-scalable=no, width=device-width" />
 		<title>Test</title>
 		<script src="_.js"></script>
 		<script src="Analyser.js"></script>
 	</head>
 	<body>
-		For online testing, go to => <a href="http://users.polytech.unice.fr/~izadi/coffee/">my web page</a>
-		
-		<div id="blue" style="height:10em; width:150px; background:blue; color:white;">
+		<div id="blue" style="height:15em; width:100%; background:blue; color:white;">
 		</div>
 		<div id="white">
 		</div>
