Fix drag rapide = tap

--- a/State.html
+++ b/State.html
@@ -4,7 +4,7 @@
 <html> 
 	<head> 
 		<title>Test</title> 
-		<script src="State.js"></script> 
+		<script src="Analyser.js"></script> 
 		<meta name = "viewport" content = "width=device-width, height=device-height, initial-scale=1.0; minimum-scale=1.0; maximum-scale=1.0; user-scalable=no"> 
 	</head> 
 	<body> 
