--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>Test</title>
 		<script src="_.js"></script>
 		<script src="global.js"></script>
-		<script src="Analyser.js"></script>
+		<script src="CoffeeTouch.js"></script>
 	</head>
 	<body>
 		<div id="blue" style="height:15em; width:100%; background:blue; color:white;">
