--- a/exemples/cube/cube.html
+++ b/exemples/cube/cube.html
@@ -66,8 +66,8 @@
 	color: black;
 }
 }	</style>			
-	<script src="_.js"></script>
-		<script src="CoffeeTouch.js"></script>
+	<script src="../../_.js"></script>
+		<script src="../../CoffeeTouch.js"></script>
 		<script src="cube.js"></script>
 </head>
 <body class="experiment" id="body">
