Bug fixed - new EventRouter

--- a/exemples/example1.html
+++ b/exemples/example1.html
@@ -6,8 +6,8 @@
 		<title>Example 1</title>
 		
 		<!-- Include de l'api -->
-		<script src="_.js"></script>
-		<script src="API.js"></script>
+		<script src="../_.js"></script>
+		<script src="../CoffeeTouch.js"></script>
 
 		<!-- Definition des fonction a trigger -->
 		<script language="JavaScript" type="text/javascript">
