--- a/exemples/cube/cube.html
+++ b/exemples/cube/cube.html
@@ -72,9 +72,8 @@
 </head>
 <body class="experiment" id="body">
 <div id="wrapper">
-<h1 id="debug"></h1>
 <div id="experiment">	
-	<div id="cube">
+	<div id="cube" style="background:blue;">
         <div class="face one">
 			One face
         </div>
@@ -95,5 +94,6 @@
         </div>
     </div>	
 </div>
+<h1 id="debug"></h1>
 </body>
 </html>
