--- a/exemples/example1.html
+++ b/exemples/example1.html
@@ -34,6 +34,7 @@
 			}
 			function down(eventArg)
 			{
+					document.getElementById('div').innnerHTML = "down";
 					document.getElementById('div').style.height = "20em";
 			}
 		</script> 
