canvas and cube examples

--- a/exemples/cube/index.html
+++ b/exemples/cube/index.html
@@ -7,7 +7,7 @@
 		<style type="text/css">
 		#experiment {
 		  -webkit-perspective: 800; 
-		  -webkit-perspective-origin: 50% 200px;
+		  -webkit-perspective-origin: 50% 150px;
 		}
 		#body {
 			overflow: auto;
@@ -15,17 +15,16 @@
 		#cube {
 		  position: relative;
 		  margin: 100px auto 0;
-		  height: 400px;
-		  width: 400px;
-		  -webkit-transition: -webkit-transform 2s linear;
+		  height: 300px;
+		  width: 300px;
+		  -webkit-transition: -webkit-transform 1s ease-out;
 		  -webkit-transform-style: preserve-3d;
 		}
 		
 		.face {
 		  position: absolute;
-		  height: 360px;
-		  width: 360px;
-		  padding: 20px;
+		  height: 300px;
+		  width: 300px;
 		  background-color: rgba(50, 50, 50, 0.7);
 		  font-size: 27px;
 		  line-height: 1em;
@@ -36,27 +35,27 @@
 		
 		#cube .one  {
 			background-color: "#FF0000";
-		  -webkit-transform: rotateX(90deg) translateZ(200px);
+		  -webkit-transform: rotateX(90deg) translateZ(150px);
 		}
 		
 		#cube .two {
-		  -webkit-transform: translateZ(200px);
+		  -webkit-transform: translateZ(150px);
 		}
 		
 		#cube .three {
-		  -webkit-transform: rotateY(90deg) translateZ(200px);
+		  -webkit-transform: rotateY(90deg) translateZ(150px);
 		}
 		
 		#cube .four {
-		  -webkit-transform: rotateY(180deg) translateZ(200px);
+		  -webkit-transform: rotateY(180deg) translateZ(150px);
 		}
 		
 		#cube .five {
-		  -webkit-transform: rotateY(-90deg) translateZ(200px);
+		  -webkit-transform: rotateY(-90deg) translateZ(150px);
 		}
 		
 		#cube .six {
-		  -webkit-transform: rotateX(-90deg) rotate(180deg) translateZ(200px) ;
+		  -webkit-transform: rotateX(-90deg) rotate(180deg) translateZ(150px) ;
 		}
 		  
 		#debug {
@@ -69,7 +68,6 @@
 	</head>
 	<body class="experiment" id="body">
 		<div id="wrapper">
-			<h1 id="debug"></h1>
 			<div id="experiment">	
 				<div id="cube">
 			        <div class="face one">
@@ -90,8 +88,9 @@
 			        <div class="face six">
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
 			        </div>
-			    </div>	
+			    </div>
 			</div>
 		</div>
+		<h1 id="debug"></h1>
 	</body>
 </html>
