dessins sur canvas

--- a/exemples/canvas/index.html
+++ b/exemples/canvas/index.html
@@ -5,14 +5,14 @@
 		<script src="viewer.js"></script>	
 		<script src="../../_.js"></script>
 		<script src="../../CoffeeTouch.js"></script>
-		<script src="canvas.js"></script>
+		<script src="draw.js"></script>
 	</head>
-	<body class="experiment" id="body">
+	<body class="experiment" id="body" style="margin: 0;">
 		<div id="wrapper">
-			<canvas id="canvas" width="800" height="800" style="background-color: rgb(240,240,240);">
+			<canvas id="canvas" width="800" height="300" style="margin: 0; background-color: rgb(240,240,240);">
 					Votre navigateur ne supporte pas les canvas.
 			</canvas>
-			<h1 id="debug"></h1>
+			<div id="debug"></div>
 		</div>
 	</body>
 </html>
