--- a/exemples/debug.html
+++ b/exemples/debug.html
@@ -13,26 +13,40 @@
 		<script language="JavaScript" type="text/javascript">
 			window.onload = function()
 				{
-					document.getElementById('div').bind("tap", debug);
+					document.getElementById('div').bind("all", debug);
+					//document.getElementById('div').addEventListener("touchstart", start);
 
 				}
 
-			function debug(eventArg, b)
+			function start(a)
 			{
-
-				document.getElementById('debug') = dump(eventArg) + "\n" + document.getElementById('debug');
+				document.getElementById('debug').innerHTML =  "start " + a.touches.length +  "\n";
+					for(var i in a.touches)
+						document.getElementById('debug').innerHTML += a.touches[i].identifier + " ";
+				document.getElementById('debug').innerHTML += document.getElementById('debug').innerHTML;
+			}
+	
+			function debug(a, b)
+			{
+				document.getElementById('debug').innerHTML = a 
+						//+ " " + dump(b) 
+						+ "\n" + document.getElementById('debug').innerHTML;
 			}
 
-			function dump(arr,level) {
-					var dumped_text = "["
-					for(var item in arr) {
-						var value = arr[item];
-						if(typeof(value)=='function') continue;
-						dumped_text += item + "=" + value + " ";
-					}
+function dump(arr) {
+		var dumped_text = "["
+		for(var item in arr) {
+			var value = arr[item];
+			if(typeof(value)=='function')
+				continue;
+			else if(typeof(value)=='object')
+				dumped_text += dump(value);
+			else
+				dumped_text += item + "=" + value + " ";
+		}
 
-				return dumped_text + "]";
-			}
+	return dumped_text + "]";
+}
 		</script> 
 	</head>
 	<body>
