--- a/exemples/debug.html
+++ b/exemples/debug.html
@@ -13,7 +13,7 @@
 		<script language="JavaScript" type="text/javascript">
 			window.onload = function()
 				{
-					document.getElementById('div').bind("all", debug);
+					document.getElementById('div').onGesture("all", debug);
 					//document.getElementById('div').addEventListener("touchstart", start);
 
 				}
