--- a/exemples/canvas/index.html
+++ b/exemples/canvas/index.html
@@ -6,6 +6,7 @@
 		<script src="../../_.js"></script>
 		<script src="../../CoffeeTouch.js"></script>
 		<script src="draw.js"></script>
+		<meta name="viewport" content="user-scalable=no, width=device-width" />
 	</head>
 	<body class="experiment" id="body" style="margin: 0;">
 		<div id="wrapper">
