--- a/exemples/cube/index.html
+++ b/exemples/cube/index.html
@@ -20,6 +20,7 @@
 		  width: 200px;
 		  -webkit-transition: -webkit-transform 1s ease-out;
 		  -webkit-transform-style: preserve-3d;
+		  -webkit-transform: rotateY(124deg);
 		}
 		
 		.face {
@@ -72,23 +73,16 @@
 			<div id="experiment">	
 				<div id="cube">
 			        <div class="face one">
-						One face
 			        </div>
 			        <div class="face two">
-						Flick :
-						Up, down, left, right
 			        </div>
 			        <div class="face three">
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
 			        </div>
 			        <div class="face four">
-						New forms of navigation are fun.
 			        </div>
 			        <div class="face five">
-						Rotating 3D cube
 			        </div>
 			        <div class="face six">
-						Ut enim ad minim veniam, quis nostrud exercitation.
 			        </div>
 			    </div>
 			</div>
