--- a/examples/try/index.html
+++ b/examples/try/index.html
@@ -17,6 +17,7 @@
 		  <label for="gesture_name">Launch the animation by making the following gesture: </label>
 		  <input style="text-transform: lowercase" id="gesture_name" type="text" />
     </div>
+    <p class='example'>Try: 'down,down', 'three:pinch', 'rotate'</p>
     <br />
     <link href='http://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
 	</body>
