--- a/examples/try/index.html
+++ b/examples/try/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8" />		
-		<script src="../../jquery.js"></script>
-		<script src="../../jquery-ui-1.8.16.custom.min.js"></script>
-		<script src="../../CoffeeTouch.js"></script>
+		<meta charset="UTF-8" />
+		<script src="../js/jquery.js"></script>
+		<script src="../js/CoffeeTouch.js"></script>
 		<script src="try.js"></script>
-    <link href="try.css" media="screen, projection" rel="stylesheet" type="text/css" />
+    <link href="try.css"        rel="stylesheet" type="text/css" />
+    <link href="../css/animate.css" rel="stylesheet" type="text/css" />
 
 	</head>
 	<body class="experiment" id="body" style="margin: 0;">
-		<div id="animation_box">
-		  Yeaah!
+		<div id="animation_box" class="animated">
+		  <span>Sandbox</span>
 		</div>
 		<div id="right">
 		  <label for="gesture_name">Launch the animation by making the following gesture: </label>
