--- a/examples/all/index.html
+++ b/examples/all/index.html
@@ -1,27 +1,28 @@
 <DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8" />
-		<script src="../js/jquery.js"></script>
-		<script src="../js/CoffeeTouch.js"></script>
-		<script src="try.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+    <script src="../js/jquery.js"></script>
+    <script src="../js/CoffeeTouch.js"></script>
+    <script src="try.js"></script>
     <link href="try.css" media="screen, projection" rel="stylesheet" type="text/css" />
     <link href="../css/animate.css" rel="stylesheet" type="text/css" />
 
-	</head>
-	<body class="experiment" id="body" style="margin: 0;">
-		<div class="animated animation_box" data-animation="pulse" 					id="tap">        Tap</div>
-		<div class="animated animation_box" data-animation="fadeOutLeft" 		id="left">       Drag to the left</div>
-		<div class="animated animation_box" data-animation="fadeOutLeftBig" id="flick_left"> Flick to the left</div>
-		<div class="animated animation_box" data-animation="bounceOutLeft" 	id="left_left">  Drag 2 fingers to the leftt</div>
-		<div class="animated animation_box" data-animation="flash" 					id="doubletap">  Double Tap</div>
-		<div class="animated animation_box" data-animation="tada" 					id="pinch">      Pinch</div>
-		<div class="animated animation_box" data-animation="tada" 					id="three_pinch">Pinch with 3 fingers</div>
-		<div class="animated animation_box" data-animation="pulse" 					id="spread">     Spread (or pinch out)</div>
-		<div class="animated animation_box" data-animation="swing" 					id="rotate">     Rotate</div>
-		<div class="animated animation_box" data-animation="flash" 					id="fixed">      Fixed (or Press)</div>
-		<div class="animated animation_box" data-animation="flash" 					id="fixedend">   FixedEnd (when the press is finished)</div>
+  </head>
+  <body class="experiment" id="body" style="margin: 0;">
+    <div class="animated animation_box" data-animation="pulse"           id="tap">        Tap</div>
+    <div class="animated animation_box" data-animation="fadeOutLeft"     id="left">       Drag to the left</div>
+    <div class="animated animation_box" data-animation="fadeOutLeftBig"  id="flick_left"> Flick to the left</div>
+    <div class="animated animation_box" data-animation="bounceOutLeft"   id="left_left">  Drag 2 fingers to the leftt</div>
+    <div class="animated animation_box" data-animation="flash"           id="doubletap">  Double Tap</div>
+    <div class="animated animation_box" data-animation="tada"            id="pinch">      Pinch</div>
+    <div class="animated animation_box" data-animation="tada"            id="three_pinch">Pinch with 3 fingers</div>
+    <div class="animated animation_box" data-animation="pulse"           id="spread">     Spread (or pinch out)</div>
+    <div class="animated animation_box" data-animation="swing"           id="rotate">     Rotate</div>
+    <div class="animated animation_box" data-animation="flash"           id="fixed">      Fixed (or Press)</div>
+    <div class="animated animation_box" data-animation="flash"           id="fixedend">   FixedEnd (when the press is finished)</div>
 
     <link href='http://fonts.googleapis.com/css?family=Sigmar+One' rel='stylesheet' type='text/css'>
-	</body>
+  </body>
 </html>
