--- a/examples/canvas/index.html
+++ b/examples/canvas/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8" />		
-		<script src="../../CoffeeTouch.js"></script>
-		<script src="draw.js"></script>
-	</head>
-	<body class="experiment" id="body" style="margin: 0;">
-		<div id="wrapper">
-			<canvas id="canvas" width="980" height="1000" style="margin: 0; background-color: rgb(245,245,245);">
-					Votre navigateur ne supporte pas les canvas.
-			</canvas>
-			<div id="debug"></div>
-		</div>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+    <script src="../../CoffeeTouch.js"></script>
+    <script src="draw.js"></script>
+  </head>
+  <body class="experiment" id="body" style="margin: 0;">
+    <div id="wrapper">
+      <canvas id="canvas" width="980" height="1000" style="margin: 0; background-color: rgb(245,245,245);">
+          Votre navigateur ne supporte pas les canvas.
+      </canvas>
+      <div id="debug"></div>
+    </div>
+  </body>
 </html>
