--- a/examples/all/index.html
+++ b/examples/all/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+    <meta name="viewport" content="user-scalable=no, width=device-width" />
     <script src="../js/jquery.js"></script>
     <script src="../js/CoffeeTouch.js"></script>
     <script src="try.js"></script>
